Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>My name is Trent Moss, I am currently attending Flatiron's Software Engineering Bootcamp, and I'm excited to learn everything I can about coding, computer science and everything inbetween.</p>
